[gd_scene load_steps=8 format=2]

[ext_resource path="res://Images/item.png" type="Texture" id=1]
[ext_resource path="res://Scripts/HUD.gd" type="Script" id=2]
[ext_resource path="res://bw_theme.tres" type="Theme" id=3]
[ext_resource path="res://Images/pause_button.png" type="Texture" id=5]
[ext_resource path="res://Images/volume_icons.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=2124]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=1441]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 32 )

[node name="HUD" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="rectItem" type="TextureRect" parent="."]
light_mask = 0
margin_right = 64.0
margin_bottom = 64.0
theme = ExtResource( 3 )
texture = SubResource( 2124 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblItemsCollected" type="Label" parent="."]
light_mask = 0
margin_left = 72.0
margin_right = 160.0
margin_bottom = 56.0
theme = ExtResource( 3 )
text = "0/1"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblLevel" type="Label" parent="."]
light_mask = 0
anchor_left = 0.5
anchor_right = 0.5
margin_left = -56.5
margin_right = 56.5
margin_bottom = 56.0
theme = ExtResource( 3 )
text = "Level 1"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tutorials" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnPause" type="TextureButton" parent="."]
margin_left = 896.0
margin_right = 960.0
margin_bottom = 64.0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupPause" type="PopupPanel" parent="."]
pause_mode = 2
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -190.0
margin_top = -92.0
margin_right = 190.0
margin_bottom = 92.0
theme = ExtResource( 3 )
popup_exclusive = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="PopupPause"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="lblPause" type="Label" parent="PopupPause/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Pause"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnMainMenu" type="Button" parent="PopupPause/Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -52.0
margin_right = 178.0
margin_bottom = -4.0
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnContinue" type="Button" parent="PopupPause/Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -170.0
margin_top = -52.0
margin_bottom = -4.0
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnMute" type="Button" parent="PopupPause/Control"]
margin_right = 44.0
margin_bottom = 46.0
toggle_mode = true
icon = SubResource( 1441 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="btnPause" to="." method="_on_btnPause_pressed"]
[connection signal="pressed" from="PopupPause/Control/btnMainMenu" to="." method="_on_btnMainMenu_pressed"]
[connection signal="pressed" from="PopupPause/Control/btnContinue" to="." method="_on_btnContinue_pressed"]
[connection signal="pressed" from="PopupPause/Control/btnMute" to="." method="_on_btnMute_pressed"]
